deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-check
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-check
  template:
    metadata:
      labels:
        app: health-check
    spec:
      containers:
        - name: health-check
          image: danielpalm/php-healthcheck-service:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
