service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minikube-service
spec:
  selector:
    app: minikube-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
