ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-check-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
          - path: /otusapp/danielpalm/*
            pathType: Prefix
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
